single-pass/envoy.yaml

admin:
  access_log_path: "/tmp/admin_access.log"
  address:
    socket_address:
      address: "127.0.0.1"
      port_value: 9901
static_resources:
  listeners:

    -
      name: "single-pass-svc-http-listener"
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 5000
      filter_chains:
        -
          filters:
            -
              name: "envoy.http_connection_manager"
              config:
                stat_prefix: "ingress_8786"
                codec_type: "AUTO"
                route_config:
                  name: "single-pass-http-route"
                  virtual_hosts:
                    -
                      name: "single-pass-http-route"
                      domains:
                        - "*"
                      routes:
                        -
                          match:
                            prefix: "/"
                          route:
                            cluster: "single-pass"
                http_filters:
                  -
                    name: "envoy.router"                            
  clusters:
      -
        name: "single-pass"
        connect_timeout: "0.25s"
        type: "strict_dns"
        lb_policy: "ROUND_ROBIN"
        hosts:
          -
            socket_address:
              address: 127.0.0.1
              port_value: 5080
